No longer visited directly anymore
hono + yoga + gql was dropped already

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,17 +34,11 @@
 	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [11412, 11853],
+	"forwardPorts": [11412],
 	"portsAttributes": {
 		"11412": {
 			"elevateIfNeeded": true,
 			"label": "Pages",
-			"onAutoForward": "notify",
-			"protocol": "http"
-		},
-		"11853": {
-			"elevateIfNeeded": true,
-			"label": "Workers",
 			"onAutoForward": "notify",
 			"protocol": "http"
 		}
