Rename to fix structure

--- a/.github/workflows/publish-worker.yml
+++ b/.github/workflows/publish-worker.yml
@@ -10,7 +10,7 @@ on:
       - 'package*.json'
       - 'worker/package*.json'
       - 'worker/aiTypes/**'
-      - 'worker/rpc/**'
+      - 'worker/src/**'
       - 'worker/typechat/**'
       - 'tsconfig.json'
       - 'worker/tsconfig.json'
