--- a/pages/package.json
+++ b/pages/package.json
@@ -37,6 +37,7 @@
 	"dependencies": {
 		"@qwikest/icons": "^0.0.13",
 		"flowbite": "^2.3.0",
+		"idb": "^8.0.0",
 		"meta-png": "^1.0.6"
 	},
 	"devDependencies": {
