Forgot `run` command

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"scripts": {
 		"fmt": "prettier --write .",
 		"fmt.check": "prettier --check .",
-		"build:local": "cd worker/aiTypes && npm -w worker build:types && cd ../../ && npm -w worker run build && npm -w pages run build",
-		"build:pages": "npm ci --include-workspace-root --workspace pages --workspace worker --include dev && cd worker/aiTypes && npm -w worker build:types && cd ../../ && npm -w worker run build && npm -w pages run build",
+		"build:local": "cd worker/aiTypes && npm -w worker run build:types && cd ../../ && npm -w worker run build && npm -w pages run build",
+		"build:pages": "npm ci --include-workspace-root --workspace pages --workspace worker --include dev && cd worker/aiTypes && npm -w worker run build:types && cd ../../ && npm -w worker run build && npm -w pages run build",
 		"clean": "npx -y rimraf@latest --glob ./**/.wrangler ./pages/dist ./pages/server ./pages/tmp ./worker/aiTypes/*.d.ts ./worker/aiTypes/types.json"
 	},
 	"repository": {
