--- a/pages/package.json
+++ b/pages/package.json
@@ -38,8 +38,7 @@
 		"@qwikest/icons": "^0.0.13",
 		"flowbite": "^2.3.0",
 		"idb": "^8.0.0",
-		"meta-png": "^1.0.6",
-		"p-queue": "^8.0.1"
+		"meta-png": "^1.0.6"
 	},
 	"devDependencies": {
 		"@builder.io/qwik": "^1.5.2",
