--- a/pages/package.json
+++ b/pages/package.json
@@ -36,14 +36,17 @@
 	},
 	"dependencies": {
 		"@qwikest/icons": "^0.0.13",
+		"dompurify": "^3.1.0",
 		"flowbite": "^2.3.0",
 		"idb": "^8.0.0",
+		"marked": "^12.0.1",
 		"meta-png": "^1.0.6"
 	},
 	"devDependencies": {
 		"@builder.io/qwik": "^1.5.2",
 		"@builder.io/qwik-city": "^1.5.2",
 		"@rollup/plugin-node-resolve": "^15.2.3",
+		"@types/dompurify": "^3.0.5",
 		"@types/eslint": "^8.56.7",
 		"@typescript-eslint/eslint-plugin": "^7.6.0",
 		"@typescript-eslint/parser": "^7.6.0",
