--- a/pages/package.json
+++ b/pages/package.json
@@ -39,7 +39,12 @@
 		"dompurify": "^3.1.0",
 		"flowbite": "^2.3.0",
 		"idb": "^8.0.0",
-		"marked": "^12.0.1",
+		"marked": "^11.2.0",
+		"marked-admonition-extension": "^0.0.4",
+		"marked-alert": "^2.0.1",
+		"marked-bidi": "^1.0.9",
+		"marked-extended-tables": "^1.0.8",
+		"marked-footnote": "^1.2.2",
 		"meta-png": "^1.0.6"
 	},
 	"devDependencies": {
