--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -44,6 +44,9 @@ updates:
       # Currently not supported by qwik
       - dependency-name: 'eslint'
         versions: '>=9.0.0'
+      # Currently not supported by marked extensions
+      - dependency-name: 'marked'
+        versions: '>=12.0.0'
     groups:
       cloudflare:
         patterns:
