--- a/pages/package.json
+++ b/pages/package.json
@@ -63,6 +63,7 @@
 		"postcss-nesting": "^12.1.1",
 		"prettier-plugin-tailwindcss": "^0.5.13",
 		"tailwindcss": "^3.4.3",
+		"turnstile-types": "^1.2.1",
 		"vite-tsconfig-paths": "^4.3.2"
 	}
 }
