--- a/.github/workflows/updateWorkersRuntime.yml
+++ b/.github/workflows/updateWorkersRuntime.yml
@@ -12,6 +12,7 @@ on:
       - synchronize
     paths:
       - '**/package*.json'
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref_name }}
@@ -19,7 +20,7 @@ concurrency:
 
 jobs:
   update-toml:
-    if: startsWith(github.event.pull_request.head.ref, 'dependabot/npm_and_yarn/') && contains(github.event.pull_request.head.ref, '/cloudflare-') && github.actor == 'dependabot[bot]'
+    if: github.event_name == 'workflow_dispatch' || (startsWith(github.event.pull_request.head.ref, 'dependabot/npm_and_yarn/') && contains(github.event.pull_request.head.ref, '/cloudflare-') && github.actor == 'dependabot[bot]')
     runs-on: ubuntu-latest
     permissions:
       contents: write
