--- a/pages/wrangler.toml
+++ b/pages/wrangler.toml
@@ -1,7 +1,7 @@
 name = "matt-ai"
 pages_build_output_dir = "pages/dist"
 compatibility_date = "2024-04-19"
-compatibility_flags = ["nodejs_compat", "brotli_content_encoding"]
+compatibility_flags = ["nodejs_compat"]
 ai = { binding = "AI" }
 services = [
     { binding = "BACKEND_WORKER", service = "mattai-worker-preview", environment = "production" },
@@ -13,7 +13,7 @@ NODE_ENV = "development"
 
 [env.production]
 compatibility_date = "2024-04-19"
-compatibility_flags = ["nodejs_compat", "brotli_content_encoding"]
+compatibility_flags = ["nodejs_compat"]
 ai = { binding = "AI" }
 services = [
     { binding = "BACKEND_WORKER", service = "mattai-worker", environment = "production" },
