Needed for `@cloudflare/ai`

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -52,6 +52,7 @@ updates:
         patterns:
           - '@cloudflare/*'
           - 'wrangler'
+          - 'base64-js'
         exclude-patterns:
           - '@cloudflare/workers-types'
       code-management:
