--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -47,6 +47,10 @@ updates:
       # Currently not supported by marked extensions
       - dependency-name: 'marked'
         versions: '>=12.0.0'
+      # Currently breaks `onSubmitCompleted()`
+      - dependency-name: '@builder.io/qwik*'
+        versions:
+          - "1.5.5"
     groups:
       cloudflare:
         patterns:
