--- a/pages/tsconfig.json
+++ b/pages/tsconfig.json
@@ -13,6 +13,6 @@
 		"inlineSourceMap": true,
 		"outDir": "tmp"
 	},
-	"files": ["./.eslintrc.cjs"],
-	"include": ["src", "./*.d.ts", "./*.config.ts"]
+	"files": ["./.eslintrc.cjs", "./prettier.config.mjs", "./postcss.config.cjs", "./tailwind.config.cjs"],
+	"include": ["src", "adapters", "./*.d.ts", "./*.config.ts"]
 }
