--- a/worker/package.json
+++ b/worker/package.json
@@ -4,7 +4,7 @@
 	"scripts": {
 		"build:types": "tsc --project aiTypes/tsconfig.json",
 		"build": "node --disallow-code-generation-from-strings --use-largepages=on --loader ts-node/esm aiTypes/convert.mts",
-		"clean": "npx -y rimraf@latest --glob ./**/.wrangler ./aiTypes/*.d.ts ./aiTypes/types.json",
+		"clean": "npx -y rimraf@latest --glob ./aiTypes/*.d.ts ./aiTypes/types.json",
 		"start": "wrangler dev --persist-to ../.wrangler/state"
 	},
 	"repository": {
