--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -41,9 +41,8 @@ jobs:
           node-version: lts/*
           check-latest: true
           cache: 'npm'
-      - run: npm -w pages install -D eslint @typescript-eslint/eslint-plugin @typescript-eslint/parser eslint-plugin-qwik
-      - run: npm -w pages run lint:fix
-        working-directory: pages
+      - run: npm install -D eslint @typescript-eslint/eslint-plugin @typescript-eslint/parser eslint-plugin-qwik
+      - run: npm run lint:fix
         continue-on-error: true
       - name: Check for Changes
         id: changes
@@ -72,8 +71,7 @@ jobs:
         if: steps.changes.outputs.changes == 'true'
         continue-on-error: true
       - run: npm install -D @microsoft/eslint-formatter-sarif
-      - run: npx -w pages eslint . --ext .js,.jsx,.ts,.tsx --format @microsoft/eslint-formatter-sarif --output-file eslint-results.sarif
-        working-directory: pages
+      - run: npm run lint -- --format @microsoft/eslint-formatter-sarif --output-file eslint-results.sarif
         continue-on-error: true
       - uses: github/codeql-action/upload-sarif@f079b8493333aace61c81488f8bd40919487bd9f # v3.25.7
         with:
