Use custom model list

--- a/pages/tsconfig.json
+++ b/pages/tsconfig.json
@@ -12,5 +12,5 @@
 		"outDir": "tmp"
 	},
 	"files": ["./.eslintrc.cjs", "./prettier.config.mjs", "./postcss.config.cjs", "./tailwind.config.cjs"],
-	"include": ["src", "adapters", "./*.d.ts", "./*.config.ts"]
+	"include": ["../shared", "src", "adapters", "./*.d.ts", "./*.config.ts"]
 }
