--- a/worker/tsconfig.json
+++ b/worker/tsconfig.json
@@ -1,5 +1,5 @@
 {
 	"extends": "../tsconfig.json",
 	"files": ["./.eslintrc.cjs", "prettier.config.mjs"],
-	"include": ["aiTypes", "rpc", "typechat", "../do"]
+	"include": ["../shared", "../do", "aiTypes", "rpc", "typechat"]
 }
