Revert "Fix escaping?"
This reverts commit 141e39d2f6ad8b96fb31631312600d1227e04cf0.

--- a/.github/workflows/ai-catalog.yml
+++ b/.github/workflows/ai-catalog.yml
@@ -47,8 +47,8 @@ jobs:
                       .properties[] | select(.property_id == "beta") | .value == "true"
                     ] | any),
                     properties: (reduce .properties[] as $prop ({}; .[$prop.property_id] = (
-                      if $prop.value | test("^(true|false)$") then $prop.value | test("true")
-                      else if $prop.value | test("^\\d+$") then $prop.value | tonumber
+                      if $prop.value | test("^(true|false)$") then ($prop.value | test("true"))
+                      else if $prop.value | test("^\\d+$") then ($prop.value | tonumber)
                       else $prop.value
                       end
                     )))
