--- a/worker/package.json
+++ b/worker/package.json
@@ -3,6 +3,7 @@
 	"type": "module",
 	"scripts": {
 		"build:types": "tsc --project aiTypes/tsconfig.json",
+		"prebuild": "cd worker/aiTypes && npm run build:types && cd ../..",
 		"build": "node --disallow-code-generation-from-strings --use-largepages=silent --loader ts-node/esm aiTypes/convert.mts",
 		"clean": "npx -y rimraf@latest --glob ./aiTypes/*.d.ts ./aiTypes/types.json",
 		"start": "wrangler dev --persist-to ../.wrangler/state"
