--- a/.github/workflows/publish-worker.yml
+++ b/.github/workflows/publish-worker.yml
@@ -44,10 +44,8 @@ jobs:
           check-latest: true
           cache: 'npm'
       - run: npm ci --include-workspace-root --workspace worker
-      # For some reason tsc doesn't start looking in the folder, but 1 up
-      - run: npx tsc --project aiTypes/tsconfig.json
-        working-directory: worker/aiTypes
       - run: npm -w worker run build
+        working-directory: worker
       - run: echo "wrangler_version=$(npm ls wrangler --depth=0 --json | jq -r '.dependencies.wrangler.version')" >> $GITHUB_OUTPUT
         id: npm_wrangler_version
       - uses: cloudflare/wrangler-action@a08dc762e87e8754e0d56a16a35a70b406bc869f # v3.6.1
