--- a/.github/workflows/nvLatest.yml
+++ b/.github/workflows/nvLatest.yml
@@ -38,7 +38,7 @@ jobs:
           node-version: latest
           check-latest: true
           cache: 'npm'
-      - run: echo "${{ steps.sn.outputs.node-version }}" > .nvmrc
+      - run: echo "${{ steps.sn.outputs.node-version }}" > pages/.nvmrc
       - name: Git Setup
         run: |
           git config user.name "github-actions[bot]"
