--- a/tsconfig.json
+++ b/tsconfig.json
@@ -106,13 +106,6 @@
 		// "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
 		"skipLibCheck": true /* Skip type checking all .d.ts files. */
 	},
-	"files": ["./.eslintrc.cjs", "./prettier.config.mjs"],
-	"ts-node": {
-		"compilerOptions": {
-			"module": "NodeNext",
-			"moduleResolution": "NodeNext",
-			"types": ["node"]
-		},
-		"swc": true
-	}
+	"include": ["shared"],
+	"files": ["./.eslintrc.cjs", "./prettier.config.mjs"]
 }
