--- a/worker/package.json
+++ b/worker/package.json
@@ -2,6 +2,7 @@
 	"name": "worker",
 	"type": "module",
 	"scripts": {
+		"clean": "",
 		"start": "wrangler dev --persist-to ../.wrangler/state"
 	},
 	"repository": {
