--- a/worker/package.json
+++ b/worker/package.json
@@ -3,7 +3,8 @@
 	"type": "module",
 	"scripts": {
 		"clean": "",
-		"start": "wrangler dev --persist-to ../.wrangler/state"
+		"build": "",
+		"start": "wrangler dev --remote --persist-to ../.wrangler/state"
 	},
 	"repository": {
 		"type": "git",
