Run with gpu support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
 		"source.fixAll": "explicit",
 		"source.organizeImports": "explicit"
 	},
+	"docker.commands.run": "${containerCommand} run --rm --gpus all -d ${exposedPorts} ${tag}",
 	"typescript.preferences.importModuleSpecifier": "relative",
 	"typescript.tsdk": "./node_modules/typescript/lib",
 	"github-actions.workflows.pinned.workflows": [".github/workflows/publish-worker.yml", ".github/workflows/nvSplit.yml"],
