--- a/lora-retrainer/Dockerfile
+++ b/lora-retrainer/Dockerfile
@@ -12,13 +12,18 @@ RUN --mount=type=cache,target=/var/cache/apt apt-get update
 # Upgrade packages (non-breaking)
 RUN --mount=type=cache,target=/var/cache/apt apt-get upgrade -y
 RUN --mount=type=cache,target=/var/cache/apt apt-get install -y sudo
-# # Install additional (node)
-# RUN --mount=type=cache,target=/var/cache/apt apt-get install -y ca-certificates curl wget gnupg dirmngr xz-utils libatomic1 
-# RUN --mount=type=cache,target=/var/cache/apt apt-get install -y ca-certificates curl wget gnupg dirmngr
-# # Install additional (python)
-# RUN --mount=type=cache,target=/var/cache/apt apt-get install -y ca-certificates netbase tzdata
-# RUN --mount=type=cache,target=/var/cache/apt apt-get install -y dpkg-dev gcc gnupg libbluetooth-dev libbz2-dev libc6-dev libdb-dev libexpat1-dev libffi-dev libgdbm-dev liblzma-dev libncursesw5-dev libreadline-dev libsqlite3-dev libssl-dev make tk-dev uuid-dev wget xz-utils zlib1g-dev
-# RUN --mount=type=cache,target=/var/cache/apt apt-get install -y wget
+# Install additional (node)
+# https://github.com/docker-library/python/blob/master/3.12/slim-bookworm/Dockerfile#L20-L24
+RUN --mount=type=cache,target=/var/cache/apt apt-get install -y ca-certificates curl wget gnupg dirmngr xz-utils libatomic1 
+# https://github.com/nodejs/docker-node/blob/main/20/bookworm-slim/Dockerfile#L70
+RUN --mount=type=cache,target=/var/cache/apt apt-get install -y ca-certificates curl wget gnupg dirmngr
+# Install additional (python)
+# https://github.com/docker-library/python/blob/master/3.12/slim-bookworm/Dockerfile#L20
+RUN --mount=type=cache,target=/var/cache/apt apt-get install -y ca-certificates netbase tzdata
+# https://github.com/docker-library/python/blob/master/3.12/slim-bookworm/Dockerfile#L34-L56
+RUN --mount=type=cache,target=/var/cache/apt apt-get install -y dpkg-dev gcc gnupg libbluetooth-dev libbz2-dev libc6-dev libdb-dev libexpat1-dev libffi-dev libgdbm-dev liblzma-dev libncursesw5-dev libreadline-dev libsqlite3-dev libssl-dev make tk-dev uuid-dev wget xz-utils zlib1g-dev
+# https://github.com/docker-library/python/blob/master/3.12/slim-bookworm/Dockerfile#L147
+RUN --mount=type=cache,target=/var/cache/apt apt-get install -y wget
 # Clean up cache (reduce image size)
 RUN --mount=type=cache,target=/var/cache/apt apt-get clean
 # Delete packages not used anymore
