--- a/lora-retrainer/Dockerfile
+++ b/lora-retrainer/Dockerfile
@@ -29,6 +29,10 @@ RUN --mount=type=cache,target=/var/cache/apt apt-get clean
 # Delete packages not used anymore
 RUN --mount=type=cache,target=/var/cache/apt apt-get autoremove -y
 
+# Setup PLP user
+RUN groupadd --gid 1000 runner && useradd --uid 1000 --gid runner --shell /bin/bash --create-home runner
+USER runner
+
 # Setup sudo
 RUN echo node ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/node
 RUN chmod 0440 /etc/sudoers.d/node
