--- a/tsconfig.json
+++ b/tsconfig.json
@@ -106,6 +106,5 @@
 		// "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
 		"skipLibCheck": true /* Skip type checking all .d.ts files. */
 	},
-	"include": ["shared"],
-	"files": ["./.eslintrc.cjs", "./prettier.config.mjs"]
+	"include": ["shared"]
 }
