--- a/lora-retrainer/tsconfig.json
+++ b/lora-retrainer/tsconfig.json
@@ -1,10 +1,9 @@
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "rootDir": "./src",
-    "outDir": "dist",
-    "noEmit": false
-  },
-  "files": ["./.eslintrc.cjs", "prettier.config.mjs"],
-  "include": ["src"]
+	"extends": "../tsconfig.json",
+	"compilerOptions": {
+		"rootDir": "./src",
+		"outDir": "./dist",
+		"noEmit": false
+	},
+	"include": ["src"]
 }
