--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
 		"source.organizeImports": "explicit"
 	},
 	"docker.commands.run": "${containerCommand} run --rm --gpus all -d ${exposedPorts} ${tag}",
+	"docker.commands.runInteractive": "${containerCommand} run --rm --gpus all -it ${exposedPorts} ${tag}",
 	"typescript.preferences.importModuleSpecifier": "relative",
 	"typescript.tsdk": "./node_modules/typescript/lib",
 	"github-actions.workflows.pinned.workflows": [".github/workflows/publish-worker.yml", ".github/workflows/nvSplit.yml"],
