Setup quick node server

--- a/lora-retrainer/tsconfig.json
+++ b/lora-retrainer/tsconfig.json
@@ -3,7 +3,8 @@
 	"compilerOptions": {
 		"rootDir": "./src",
 		"outDir": "./dist",
-		"noEmit": false
+		"noEmit": false,
+		"types": ["node"]
 	},
 	"include": ["src"]
 }
