--- a/lora-retrainer/package.json
+++ b/lora-retrainer/package.json
@@ -20,5 +20,10 @@
 	"bugs": {
 		"url": "https://github.com/demosjarco/matt-ai/issues"
 	},
-	"homepage": "https://github.com/demosjarco/matt-ai#readme"
+	"homepage": "https://github.com/demosjarco/matt-ai#readme",
+	"dependencies": {
+		"@hono/node-server": "^1.12.0",
+		"@hono/zod-validator": "^0.2.2",
+		"hono": "^4.4.12"
+	}
 }
